--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     <div>
       <span>Best Good Filter</span>
       <select id="bestGoodFilterSelect">
-        <option value="best" selected>BEST Only</option>
-        <option value="good">GOOD Only</option>
-        <option value="all">ALL</option>
+        <option value="BEST" selected>BEST Only</option>
+        <option value="GOOD">GOOD Only</option>
+        <option value="ALL">ALL</option>
       </select>
     </div>
   </div>
